fixed nav collapse toggle

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -29,7 +29,7 @@ body{
     top: 7px;
 }
 
-.navbar-light .navbar-toggler{
+.toggle{
     color: #AAC6FC !important;
     border: #AAC6FC;
 }
@@ -137,11 +137,21 @@ body{
 
 /* --- 4. Jumbotron --- */
 
+.header{
+    background-image: url("img/blueKetchupFries.png");
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    width: 100%;
+    height:457px;
+}
+
 .homeJumbo{
     background: #AAC6FC;
     width: 100%;
     margin: 0;
     text-align:center;
+    vertical-align: center;
 }
 
 .fryFriend{
